# wecoded-marketplace

./: CONTRIBUTING.md  README.md  curated-defaults.json  featured.json  index.json  marketplace.json  package-lock.json  package.json  stats.json  sync-report.json
.github/workflows/: rebuild-stats.yml  update-registry.yml  validate-plugin-pr.yml  validate-theme.yml  worker-deploy.yml
apple-services/: .gitignore  NOTICE.md  VENDORED.md  plugin.json
apple-services/.dev/: DEV-VERIFICATION.md
apple-services/commands/: apple-services-setup.md
apple-services/lib/: apple-wrapper.sh
apple-services/setup/: permissions-walkthrough.md
civic-report/: LICENSE  README.md  package.json  plugin.json
civic-report/commands/: civic-report.md
civic-report/prompts/: report-template.md  tone-instructions.md
civic-report/scripts/: fetch-elections.js  fetch-finance.js  fetch-members.js  fetch-voting.js  resolve-districts.js  setup-key.js
civic-report/tests/: config.test.js  fetch-elections.test.js  fetch-finance.test.js  fetch-members.test.js  fetch-voting.test.js  hash-address.test.js  resolve-districts.test.js  setup-key.test.js  smoke.test.js
destinclaude-drive/: plugin.json
destinclaude-encyclopedia/: plugin.json
destinclaude-encyclopedia/templates/: Beliefs and Positions.md  Core Identity.md  Open Threads and Goals.md  People Database.md  Preferences and Reference Data.md
destinclaude-food/: plugin.json
destinclaude-inbox/: plugin.json
destinclaude-messaging/: mcp-manifest.json  plugin.json
destinclaude-output-styles/: plugin.json
destinclaude-output-styles/styles/: casual.md
destinclaude-themes-plugin/: plugin.json
docs/: phase-0-implementation-prompt.md  phase-1-implementation-prompt.md  phase-2-implementation-prompt.md  phase-3-implementation-prompt.md  phase-4-implementation-prompt.md  phase-5-implementation-prompt.md  phase-6-implementation-prompt.md  theme-guide.html  unified-marketplace-plan.md  unified-marketplace-research-report.md
google-services/: plugin.json
google-services/commands/: google-services-setup.md
google-services/docs/: DEV-VERIFICATION.md
google-services/lib/: gws-wrapper.sh  registry.sh
google-services/setup/: add-account.sh  bootstrap-gcp.sh  consent-walkthrough.sh  ingest-oauth-json.sh  install-gcloud.sh  install-gws.sh  migrate-legacy.sh  open-browser.sh  reauth.sh  remove-account.sh  smoke-test.sh
integrations/: index.json
overrides/: civic-report.json  claudes-inbox.json  destinclaude-drive.json  destinclaude-encyclopedia.json  destinclaude-food.json  destinclaude-inbox.json  destinclaude-messaging.json  destinclaude-output-styles.json  destinclaude-themes-plugin.json  destinclaude.json  encyclopedia-compile.json  encyclopedia-interviewer.json  encyclopedia-librarian.json  encyclopedia-update.json  fork-file.json  google-drive.json  google-workspace.json  health.json  imessage.json  journaling-assistant.json  remote-setup.json  setup-wizard.json  sync.json  toolkit.json  update.json  wecoded-themes-plugin.json  youcoded-core.json  youcoded-drive.json  youcoded-encyclopedia.json  youcoded-food.json  youcoded-inbox.json  youcoded-messaging.json
registry/: theme-registry.json
scripts/: build-integrations.js  build-registry.py  extract-components.js  generate-previews.js  schema.js  sync.js
skills/: index.json
spotify-services/: README.md  mcp-manifest.json  plugin.json
spotify-services/server/: pyproject.toml
spotify-services/server/src/spotify_mcp/: __init__.py  __main__.py  auth.py  config.py  errors.py  server.py
spotify-services/server/src/spotify_mcp/local/: __init__.py  base.py  macos.py  windows.py
spotify-services/server/src/spotify_mcp/tools/: export.py  local_tools.py  routing.py  smart_tools.py  webapi_tools.py
spotify-services/server/src/spotify_mcp/webapi/: client.py  library.py  playback.py  playlists.py  queue.py  search.py  user.py
spotify-services/server/tests/: conftest.py  test_auth.py  test_auth_wrapper.py  test_e2e.py  test_export.py  test_local_macos.py  test_local_router.py  test_local_windows.py  test_routing.py  test_server.py  test_smart_tools.py  test_webapi_client.py  test_webapi_library.py  test_webapi_playback.py  test_webapi_playlists.py  test_webapi_queue.py  test_webapi_search.py  test_webapi_user.py
themes/: index.json
wecoded-marketplace-publisher/: README.md  package.json  plugin.json
wecoded-themes-plugin/: plugin.json
worker/: README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts  wrangler.toml
youcoded-drive/: plugin.json
youcoded-encyclopedia/: plugin.json
youcoded-food/: plugin.json
youcoded-inbox/: plugin.json
youcoded-messaging/: mcp-manifest.json  plugin.json
youcoded-output-styles/: plugin.json
(+225 files in other folders)
