[project]
name = "spotify-mcp"
version = "0.1.0"
description = "MCP server for Spotify Web API and native local desktop control."
requires-python = ">=3.12"
authors = [{ name = "YouCoded" }]
license = { text = "MIT" }
dependencies = [
    "mcp>=0.9.0",
    "spotipy>=2.24.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
# Phase 0.4 spike confirmed: winrt-Windows.Foundation must be installed
# explicitly alongside winrt-Windows.Media.Control — the latter does not
# pull the foundation bindings in transitively.
windows = [
    "winrt-Windows.Media.Control>=3.2.0",
    "winrt-Windows.Foundation>=3.2.0",
]
dev = ["pytest>=8.0", "pytest-mock>=3.12", "pytest-asyncio>=0.23"]

[project.scripts]
spotify-mcp = "spotify_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spotify_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
